明天绑定数据就行

--- a/test.html
+++ b/test.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="Zh">
 <head>
@@ -16,12 +17,7 @@
     <script src="/templets/qujing/js/html5shiv.min.js"></script>
     <script src="/templets/qujing/js/respond.min.js"></script>
     <![endif]-->
-    <script type="text/javascript"
-            src="http://me.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=1NvsxMQcbPliTw3wI98-TwhmdyABR6c5HMQoEHQvpXDjyO3-CiogT7HLTd70Klr4"
-            charset="UTF-8"></script>
-    <link rel="stylesheet" crossorigin="anonymous"
-          href="http://me.kis.v2.scr.kaspersky-labs.com/E3E8934C-235A-4B0E-825A-35A08381A191/abn/main.css?attr=aHR0cDovLzEyNy4wLjAuMS8"/>
-    <script src="/templets/qujing/js/jquery.min.1.9.1.js"></script>
+    <script type="text/javascript" src="http://me.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=oUV7n_hEcgkfCMQm91U6EbHmxRQlxc8_sE_hN8QlVIuUQNs1fJ5DLWGT-IbTmsO1" charset="UTF-8"></script><link rel="stylesheet" crossorigin="anonymous" href="http://me.kis.v2.scr.kaspersky-labs.com/E3E8934C-235A-4B0E-825A-35A08381A191/abn/main.css?attr=aHR0cDovLzEyNy4wLjAuMS8"/><script src="/templets/qujing/js/jquery.min.1.9.1.js"></script>
     <script src="/templets/qujing/js/bootstrap.min.js"></script>
     <script src="/templets/qujing/js/myjs.js"></script>
     <style>
@@ -35,7 +31,6 @@
     </style>
     <script>
         var skin_root = "/templets/qujing/"
-
         function get_nav_contents() {
             var top_channels = [
 
@@ -54,106 +49,103 @@
                 {name:"专题活动", url:"/a/zhuantihuodong/"},
 
             ];
-            var son_channels = [
-                [
+            var son_channels = [[
 
-                {name:"领导讲话", url:"/a/juwugongkai/lingdaojianghua/"},
+                {name:"领导讲话",url:"/a/juwugongkai/lingdaojianghua/"},
 
-                {name:"领导活动", url:"/a/juwugongkai/lingdaohuodong/"},
+                {name:"领导活动",url:"/a/juwugongkai/lingdaohuodong/"},
 
-                {name:"领导一周工作", url:"/a/juwugongkai/lingdaoyizhougongzuo/"},
+                {name:"领导一周工作",url:"/a/juwugongkai/lingdaoyizhougongzuo/"},
 
-                {name:"月度重点工作", url:"/a/juwugongkai/yueduzhongdiangongzuo/"},
+                {name:"月度重点工作",url:"/a/juwugongkai/yueduzhongdiangongzuo/"},
 
-                {name:"节约型机关建设", url:"/a/juwugongkai/jieyuexingjiguanjianshe/"},
+                {name:"节约型机关建设",url:"/a/juwugongkai/jieyuexingjiguanjianshe/"},
 
-                {name:"督查督办", url:"/a/juwugongkai/duchaduban/"},
+                {name:"督查督办",url:"/a/juwugongkai/duchaduban/"},
 
-                {name:"通报点评", url:"/a/juwugongkai/tongbaodianping/"},
+                {name:"通报点评",url:"/a/juwugongkai/tongbaodianping/"},
 
-                {name:"公告通知", url:"/a/juwugongkai/gonggaotongzhi/"},
+                {name:"公告通知",url:"/a/juwugongkai/gonggaotongzhi/"},
 
-                {name:"分局动态", url:"/a/juwugongkai/fenjudongtai/"},
+                {name:"分局动态",url:"/a/juwugongkai/fenjudongtai/"},
 
-            ], [
+            ],[
 
-                {name:"党建园地", url:"/a/dangqungongzuo/dangjianyuandi/"},
+                {name:"党建园地",url:"/a/dangqungongzuo/dangjianyuandi/"},
 
-                {name:"工青团妇", url:"/a/dangqungongzuo/gongqingtuanfu/"},
+                {name:"工青团妇",url:"/a/dangqungongzuo/gongqingtuanfu/"},
 
-                {name:"职工之家", url:"/a/dangqungongzuo/zhigongzhijia/"},
+                {name:"职工之家",url:"/a/dangqungongzuo/zhigongzhijia/"},
 
-            ], [
+            ],[
 
-                {name:"法规速递", url:"/a/qinglianjinrong/faguisudi/"},
+                {name:"法规速递",url:"/a/qinglianjinrong/faguisudi/"},
 
-                {name:"以案为鉴", url:"/a/qinglianjinrong/yianweijian/"},
+                {name:"以案为鉴",url:"/a/qinglianjinrong/yianweijian/"},
 
-                {name:"学习园地", url:"/a/qinglianjinrong/xuexiyuandi/"},
+                {name:"学习园地",url:"/a/qinglianjinrong/xuexiyuandi/"},
 
-                {name:"工作动态", url:"/a/qinglianjinrong/gongzuodongtai/"},
+                {name:"工作动态",url:"/a/qinglianjinrong/gongzuodongtai/"},
 
-            ], [
+            ],[
 
-                {name:"机构监管", url:"/a/jianguanzhuanti/jigoujianguan/"},
+                {name:"机构监管",url:"/a/jianguanzhuanti/jigoujianguan/"},
 
-                {name:"功能监管", url:"/a/jianguanzhuanti/gongnenjianguan/"},
+                {name:"功能监管",url:"/a/jianguanzhuanti/gongnenjianguan/"},
 
-                {name:"监管统计", url:"/a/jianguanzhuanti/jianguantongji/"},
+                {name:"监管统计",url:"/a/jianguanzhuanti/jianguantongji/"},
 
-                {name:"专题监管", url:"/a/jianguanzhuanti/zhuantijianguan/"},
+                {name:"专题监管",url:"/a/jianguanzhuanti/zhuantijianguan/"},
 
-                {name:"行政许可", url:"/a/jianguanzhuanti/xingzhengxuke/"},
+                {name:"行政许可",url:"/a/jianguanzhuanti/xingzhengxuke/"},
 
-                {name:"行政处罚", url:"/a/jianguanzhuanti/xingzhengchufa/"},
+                {name:"行政处罚",url:"/a/jianguanzhuanti/xingzhengchufa/"},
 
-                {name:"EAST应用", url:"/a/jianguanzhuanti/EASTyingyong/"},
+                {name:"EAST应用",url:"/a/jianguanzhuanti/EASTyingyong/"},
 
-            ], [
+            ],[
 
-                {name:"管理制度", url:"/a/zhengcefagui/guanlizhidu/"},
+                {name:"管理制度",url:"/a/zhengcefagui/guanlizhidu/"},
 
-                {name:"保密工作", url:"/a/zhengcefagui/baomigongzuo/"},
+                {name:"保密工作",url:"/a/zhengcefagui/baomigongzuo/"},
 
-                {name:"政策解读", url:"/a/zhengcefagui/zhengcejiedu/"},
+                {name:"政策解读",url:"/a/zhengcefagui/zhengcejiedu/"},
 
-            ], [
+            ],[
 
-                {name:"常规软件", url:"/a/xiazaizhongxin/changguiruanjian/"},
+                {name:"常规软件",url:"/a/xiazaizhongxin/changguiruanjian/"},
 
-                {name:"应用系统", url:"/a/xiazaizhongxin/yingyongxitong/"},
+                {name:"应用系统",url:"/a/xiazaizhongxin/yingyongxitong/"},
 
-                {name:"培训资料", url:"/a/xiazaizhongxin/peixunziliao/"},
+                {name:"培训资料",url:"/a/xiazaizhongxin/peixunziliao/"},
 
-                {name:"软件教程", url:"/a/xiazaizhongxin/ruanjianjiaocheng/"},
+                {name:"软件教程",url:"/a/xiazaizhongxin/ruanjianjiaocheng/"},
 
-            ], [
+            ],[
 
-                {name:"扫黑除恶", url:"/a/zhuantihuodong/saoheichue/"},
+                {name:"扫黑除恶",url:"/a/zhuantihuodong/saoheichue/"},
 
-                {name:"不忘初心牢记使命", url:"/a/zhuantihuodong/buwangchuxinlaojishiming/"},
+                {name:"不忘初心牢记使命",url:"/a/zhuantihuodong/buwangchuxinlaojishiming/"},
 
-                {name:"抗击新冠肺炎", url:"/a/zhuantihuodong/kangjixinguanfeiyan/"},
+                {name:"抗击新冠肺炎",url:"/a/zhuantihuodong/kangjixinguanfeiyan/"},
 
-                {name:"复工复产", url:"/a/zhuantihuodong/fugongfuchan/"},
+                {name:"复工复产",url:"/a/zhuantihuodong/fugongfuchan/"},
 
-                {name:"制止餐饮浪费", url:"/a/zhuantihuodong/zhizhicanyinlangfei/"},
+                {name:"制止餐饮浪费",url:"/a/zhuantihuodong/zhizhicanyinlangfei/"},
 
-                {name:"党史学习教育", url:"/a/zhuantihuodong/dangshixuexijiaoyu/"},
+                {name:"党史学习教育",url:"/a/zhuantihuodong/dangshixuexijiaoyu/"},
 
             ],];
-            var nav_contents = [{name:"主页", url:"/", sub:[{name:"home", url:"/"}]}];
-            var i = 0;
-            top_channels.forEach(function (element) {
-                var foo = {name:element.name, url:element.url, sub:son_channels[i]};
-                i = i + 1;
+            var nav_contents =[{name:"主页", url:"/", sub:[{name:"home", url:"/"}]}];
+            var i =0;
+            top_channels.forEach(function (element){
+                var foo = {name:element.name,url:element.url,sub:son_channels[i]};
+                i=i+1;
                 nav_contents.push(foo)
             })
-            console.log(nav_contents)
-            return nav_contents;
+            console.log(nav_contents);
+            return nav_contents
         }
-
-
 
         // 专门生成栏目文章类容，方便setChannelData生成数据
         function get_channel_contents() {
@@ -181,43 +173,57 @@
             var channels_contents = [
                 {
                     obj:$('#channel-1'), name:"党风廉政建设", sub:[
-                        {name:"党建宣传", href:"", artists:sub_2_1},
-                        {name:"中心组学习", href:"", artists:sub_2_2},
-                        {name:"支部建设", href:"", artists:sub_2_3},
+                        {name:"党建宣传", href:"#", artists:[
+                                {src:"/uploads/161121/2021-09-25_16-39-05_905-lp.jpg", alt:"领导一周工作test1", href:"/uploads/161121/2021-09-25_16-39-05_905-lp.jpg"},
+                                {src:"/uploads/161121/2021-09-25_16-39-05_905-lp.jpg", alt:"公告通知", href:"/uploads/161121/2021-09-25_16-39-05_905-lp.jpg"},
+                                {src:"/uploads/161121/2021-09-25_16-53-30_329-lp.jpg", alt:"机关建设", href:"/uploads/161121/2021-09-25_16-53-30_329-lp.jpg"},
+                                {src:"/uploads/161121/2021-09-25_16-40-24_023-lp.jpg", alt:"月度重点工作", href:"/uploads/161121/2021-09-25_16-40-24_023-lp.jpg"},
+                                {src:"/uploads/161121/2021-09-25_16-53-30_329-lp.jpg", alt:"领导活动", href:"/uploads/161121/2021-09-25_16-53-30_329-lp.jpg"},
+
+                            ]},
+                        {name:"中心组学习", href:"#", artists:sub_2_2},
+                        {name:"支部建设", href:"#", artists:sub_2_3},
                     ]
                 },
                 {
                     obj:$('#channel-2'), name:"党史学习", sub:[
-                        {name:"教育学习情况", href:"", artists:sub_2_2},
-                        {name:"我为群众办实事", href:"", artists:sub_2_1},
+                        {name:"教育学习情况", href:"#", artists:sub_2_2},
+                        {name:"我为群众办实事", href:"#", artists:[
+                                {src:"/uploads/161121/2021-09-25_16-39-05_905-lp.jpg", alt:"领导一周工作test1", href:"/uploads/161121/2021-09-25_16-39-05_905-lp.jpg"},
+                                {src:"/uploads/161121/2021-09-25_16-39-05_905-lp.jpg", alt:"公告通知", href:"/uploads/161121/2021-09-25_16-39-05_905-lp.jpg"},
+                                {src:"/uploads/161121/2021-09-25_16-53-30_329-lp.jpg", alt:"机关建设", href:"/uploads/161121/2021-09-25_16-53-30_329-lp.jpg"},
+                                {src:"/uploads/161121/2021-09-25_16-40-24_023-lp.jpg", alt:"月度重点工作", href:"/uploads/161121/2021-09-25_16-40-24_023-lp.jpg"},
+                                {src:"/uploads/161121/2021-09-25_16-53-30_329-lp.jpg", alt:"领导活动", href:"/uploads/161121/2021-09-25_16-53-30_329-lp.jpg"},
+
+                            ]},
                     ]
                 },
                 {
                     obj:$('#channel-3'), name:"监管统计", sub:[
-                        {name:"调研信息", href:"", artists:sub_2_1},
-                        {name:"统计信息披露", href:"", artists:sub_2_1},
-                        {name:"监管统计分析", href:"", artists:sub_2_1},
+                        {name:"调研信息", href:"#", artists:sub_2_1},
+                        {name:"统计信息披露", href:"#", artists:sub_2_1},
+                        {name:"监管统计分析", href:"#", artists:sub_2_1},
                     ]
                 },
                 {
                     obj:$('#channel-4'), name:"专题监管", sub:[
-                        {name:"案件防控", href:"", artists:sub_2_1},
-                        {name:"小微三农", href:"", artists:sub_2_1},
-                        {name:"消费者权益", href:"", artists:sub_2_1},
+                        {name:"案件防控", href:"#", artists:sub_2_1},
+                        {name:"小微三农", href:"#", artists:sub_2_1},
+                        {name:"消费者权益", href:"#", artists:sub_2_1},
                     ]
                 },
                 {
                     obj:$('#channel-5'), name:"功能监管", sub:[
-                        {name:"现场监管", href:"", artists:sub_2_1},
-                        {name:"非现场监管", href:"", artists:sub_2_1},
-                        {name:"银行机构概览", href:"", artists:sub_2_1},
+                        {name:"现场监管", href:"#", artists:sub_2_1},
+                        {name:"非现场监管", href:"#", artists:sub_2_1},
+                        {name:"银行机构概览", href:"#", artists:sub_2_1},
                     ]
                 },
                 {
                     obj:$('#channel-6'), name:"政策法规", sub:[
-                        {name:"法律法规", href:"", artists:sub_2_1},
-                        {name:"管理制度", href:"", artists:sub_2_1},
-                        {name:"保密工作", href:"", artists:sub_2_1},
+                        {name:"法律法规", href:"#", artists:sub_2_1},
+                        {name:"管理制度", href:"#", artists:sub_2_1},
+                        {name:"保密工作", href:"#", artists:sub_2_1},
                     ]
                 },
             ]
@@ -235,6 +241,9 @@
                     var sub_a = first.find("a");
                     sub_a.text(e.name);
                     sub_a.attr("href", e.href)
+                    if (e.href === "#") {
+                        sub_a.attr("onclick", "return false;")
+                    }
                     first = first.next()
                     first.hide();
                 })
@@ -275,11 +284,12 @@
         //绑定轮播
         function bind_carousel() {
             var Carousel = [
-                {src:"", alt:"11", href:"#"},
-                {src:"", alt:"22", href:"#"},
-                {src:"", alt:"33", href:"#"},
-                {src:"", alt:"44", href:"#"},
-                {src:"", alt:"55", href:"#"},
+                {src:"/uploads/161121/2021-09-25_16-39-05_905-lp.jpg", alt:"领导一周工作test1", href:"/uploads/161121/2021-09-25_16-39-05_905-lp.jpg"},
+                {src:"/uploads/161121/2021-09-25_16-39-05_905-lp.jpg", alt:"公告通知", href:"/uploads/161121/2021-09-25_16-39-05_905-lp.jpg"},
+                {src:"/uploads/161121/2021-09-25_16-53-30_329-lp.jpg", alt:"机关建设", href:"/uploads/161121/2021-09-25_16-53-30_329-lp.jpg"},
+                {src:"/uploads/161121/2021-09-25_16-40-24_023-lp.jpg", alt:"月度重点工作", href:"/uploads/161121/2021-09-25_16-40-24_023-lp.jpg"},
+                {src:"/uploads/161121/2021-09-25_16-53-30_329-lp.jpg", alt:"领导活动", href:"/uploads/161121/2021-09-25_16-53-30_329-lp.jpg"},
+
             ]
             txt = "";
             var i = 0
@@ -314,24 +324,30 @@
             $("#myCarousel-img").prepend(txt);
             // console.log($("#myCarousel-img:first-child").attr("class"))
         }
-
-        function get_top_channel_contents() {
+        //绑定侧栏
+        function bind_side(){
+            $("#side-1>p").text("领导活动");
+            var contents_1= get_top_channel_contents().artists;
+            console.log(get_channel_contents(contents_1))
+            $("#side-1-content").html(getArtistsListHtml(contents_1))
+        }
+        function get_top_channel_contents(){
             var contents = {
                 name:"领导活动",
                 artists:[
-                    {name:"test1", date:new Date('2021-01-13'), href:"#"},
-                    {name:"test2", date:new Date('2021-11-12'), href:"#"},
-                    {name:"test3", date:new Date('2021-11-12'), href:"#"},
-                    {name:"test4", date:new Date('2021-11-12'), href:"#"},
-                    {name:"test5", date:new Date('2021-11-12'), href:"#"},
+                    {name:"领导一周工作test1", date:new Date("2021-12-20"),href:"/a/juwugongkai/lingdaohuodong/20211217/6.html"},
+                    {name:"机关建设", date:new Date("2021-12-17"),href:"/a/juwugongkai/lingdaohuodong/20211217/8.html"},
+                    {name:"月度重点工作", date:new Date("2021-12-17"),href:"/a/juwugongkai/lingdaohuodong/20211217/7.html"},
+                    {name:"领导活动", date:new Date("2021-12-17"),href:"/a/juwugongkai/lingdaohuodong/20211217/5.html"},
+                    {name:"局务公开test1", date:new Date("2021-12-17"),href:"/a/juwugongkai/lingdaojianghua/20211217/4.html"},
+
                 ],
             }
             return contents
         }
-
         //绑定channel-top
         function bing_channel_top() {
-            var contents = get_top_channel_contents();
+            var contents =get_top_channel_contents();
             var top = $("#channel-top")
             top.find(".Channel-title").text(contents.name);
             top.find(".list-group").html(getArtistsListHtml(contents.artists))
@@ -357,7 +373,6 @@
                 }
             })
         }
-
         // 绑定channel数据 传递channel_id child_name 得到内容数据
         function getChannelData(channel_id, child_name) {
             var contents = get_channel_contents()
@@ -384,10 +399,9 @@
 
             var top_channels = get_nav_contents();
         }
-
         // 激活modal
-        function setModal() {
-            var contents = get_top_channel_contents();
+        function setModal(){
+            var contents =get_top_channel_contents();
             $(".modal-body").html(getArtistsListHtml(contents.artists));
             $(".modal-title").text("领导动态");
             var cookie_day = new Date(getCookie('date')).getDay();
@@ -395,21 +409,21 @@
 
             var today = new Date();
             today.setTime(today.getTime());
-            if (isShow === "") {
+            if(isShow===""){
                 $('#myModal').modal('show');
             }
-            if (cookie_day !== today.getDay()) {
+            if(cookie_day!==today.getDay()){
                 $('#myModal').modal('show');
-            } else if (isShow !== '0') {
+            }else if(isShow!=='0'){
                 $('#myModal').modal('show');
             }
-            $('#modal-close-today').click(function () {
+            $('#modal-close-today').click(function (){
                 var now = new Date();
                 var time = now.getTime();
-                var expireTime = time + 1000 * 360000;
+                var expireTime = time + 1000*360000;
                 now.setTime(expireTime);
-                document.cookie = 'date=' + today.toString() + ';expires=' + now.toUTCString() + ';path=/';
-                document.cookie = 'isShow=0' + ';expires=' + now.toUTCString() + ';path=/';
+                document.cookie = 'date='+ today.toString() +';expires='+now.toUTCString()+';path=/';
+                document.cookie='isShow=0'+';expires='+now.toUTCString()+';path=/';
             })
         }
 
@@ -421,6 +435,7 @@
             setChannelName();
             setObjAttrs();
             bing_channel_top();
+            bind_side();
             hide_add();
             updateArtistList();
             setModal();
@@ -787,7 +802,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
                     &times;
                 </button>
-                <h4 class="modal-title" id="myModalLabel">
+                <h4 class="modal-title  text-center" id="myModalLabel">
                 </h4>
             </div>
             <div class="modal-body">
