--- a/index_article.html
+++ b/index_article.html
@@ -19,8 +19,69 @@
     <script src="js/jquery.min.1.9.1.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/myjs.js"></script>
+    <style>
+        .header-info {
+            margin: 0;
+            width: 100%;
+            height: 150px;
+            background-size: 100% auto;
+            background: url("images/back_img.jpg") repeat-x;
+        }
+    </style>
+    <script>
+        var skin_root = "/"
+
+    </script>
+
 </head>
 <body>
+<div class="jumbotron text-center  header-info">
+    <div class="container ">
+        <div class="row ">
+            <div class="col-lg-12 align-self-center mx-auto bg-white text-primary">
+                <h3 id="web-title">中国银行保险监督管理委员会 ● 昭通分局</h3>
+                <h5 id="web-title-en">China Banking And Insurance Regulatory Commission Of Zhaotong Branch</h5>
+            </div>
+        </div>
+    </div>
+</div>
+<br>
+<div class="container ">
+    <div class="row">
+        <div class="col-lg-12 col-sm-12 col-md-12">
+            <ul class="breadcrumb">
+                <li><a href="#">首页</a></li>
+                <li><a href="#">2013</a></li>
+                <li class="active">十一月</li>
+            </ul>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-2 col-sm-2 col-md-2">
+            <div class="btn-group btn-group-sm">
+                <button type="button" class="btn  btn-default text-left"><span class="text-left">党史学习教育</span> <span
+                        class="text-right glyphicon glyphicon-chevron-right"></span></button>
+            </div>
+        </div>
+        <div class="col-lg-8 col-sm-8 col-md-8" style="border: darkgray solid 1px">
+            <table class="table">
+
+                <tr class="active">
+                        <td ><a href="">文章1</a></td>
+                        <td ><p class=" text-right">时间</p></td>
+                </tr>
+                <tr class="success">
+                    <td ><a href="">文章1</a></td>
+
+                    <td><p class=" text-right">时间</p></td>
+                </tr>
+
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
+
 
 </body>
 </html>
